# conan-pthreads4w

./: CMakeLists.txt  README.md  appveyor.yml  conanfile.py  pthread.h.diff  ptw32_MCS_lock.c.diff
